--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Tech Blog</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <div class="wrapper">
-        <header>
-            <h1>
-                <a href="/">home</a>
-            </h1>
-            <nav>
-                {{#if loggedIn}}
-                <a href="/dashboard">dashboard</a>
-                <button id="logout" class="btn-no-style logout">logout</button>
-                {{else}}
-                <a href="/login">login</a>
-                {{/if}}
-            </nav>
-        </header>
-        <div class="site-row">
-            <div class="site-name">
-                <h1>The Tech Blog</h1>
-            </div>
+      <header>
+        <h1>
+          <a href="/">home</a>
+        </h1>
+        <nav>
+          {{!-- {{#if loggedIn}} --}}
+            <a href="/dashboard">dashboard</a>
+            <button id="logout" class="btn-no-style logout">logout</button>
+          {{!-- {{else}} --}}
+            <a href="/login">login</a>
+          {{!-- {{/if}} --}}
+        </nav>
+      </header>
+      <div class="site-row">
+        <div class="site-name">
+          <h1>The Tech Blog</h1>
         </div>
-        <main>
-            {{{ body }}}
-        </main>
+      </div>
+      <main>
+        {{{body}}}
+      </main>
     </div>
 
-    {{#if loggedIn}}
-    <script src="/javascript/logout.js"></script>
-    {{/if}}
-</body>
+    {{!-- {{#if loggedIn}} --}}
+      <script src="/javascript/logout.js"></script>
+    {{!-- {{/if}} --}}
+  </body>
 
-</html> 
+</html>
